fix form on mobile

--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -148,4 +148,9 @@ input:-webkit-autofill:active {
         animation: highlightnav 0.1s ease;
         animation-fill-mode: forwards;
     }
+
+    .form-wrapper {
+        padding: 2vmin;
+        width: 90vmin;
+    }
 }
